--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         <artifactId>junit</artifactId>
         <version>4.12</version>
       </dependency>
+      <dependency>
+        <groupId>org.uqbar-project</groupId>
+        <artifactId>geodds-xtend</artifactId>
+        <version>1.0.0</version>
+      </dependency>
    </dependencies>
 </project>
 
