--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
         <artifactId>geodds-xtend</artifactId>
         <version>1.0.0</version>
       </dependency>
+      <dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+      </dependency>
    </dependencies>
 </project>
 
