--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,39 @@
         <artifactId>junit</artifactId>
         <version>4.12</version>
       </dependency>
+
       <dependency>
         <groupId>org.uqbar-project</groupId>
         <artifactId>geodds-xtend</artifactId>
         <version>1.0.0</version>
       </dependency>
+
       <dependency>
     	<groupId>com.googlecode.json-simple</groupId>
     	<artifactId>json-simple</artifactId>
     	<version>1.1.1</version>
       </dependency>
-   </dependencies>
+
+	<dependency>
+	  <groupId>com.google.code.gson</groupId>
+  	  <artifactId>gson</artifactId>
+  	  <version>2.6.2</version>
+	  </dependency>
+	
+	<dependency>
+	    <groupId>org.codehaus.jackson</groupId>
+	    <artifactId>jackson-mapper-asl</artifactId>
+    	    <version>1.9.13</version>
+	</dependency>
+
+	<dependency>
+   	    <groupId>com.sun.jersey</groupId>
+   	    <artifactId>jersey-client</artifactId>
+   	    <version>1.19.1</version>
+	</dependency>
+
+
+</dependencies>
+
 </project>
 
