--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
    	    <version>1.19.1</version>
 	</dependency>
 
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-all</artifactId>
+	    <version>1.9.5</version>
+	</dependency>
 
 </dependencies>
 
