--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 	    <artifactId>mockito-all</artifactId>
 	    <version>1.9.5</version>
 	</dependency>
+	
+	<!-- http://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+   	 	<groupId>javax.mail</groupId>
+    	<artifactId>mail</artifactId>
+    	<version>1.4.7</version>
+	</dependency>
 
 </dependencies>
 
