--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
     	<version>1.4.7</version>
 	</dependency>
 
+	<dependency>
+  		<groupId>commons-io</groupId>
+ 		 <artifactId>commons-io</artifactId>
+ 		 <version>2.5</version>
+	</dependency>
+
 </dependencies>
 
 </project>
