--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
   <groupId>TPAnual</groupId>
   <artifactId>TPAnual</artifactId>
   <version>1</version>
+  <packaging>jar</packaging>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+        
   <build>
     <plugins>
       <plugin>
@@ -14,13 +19,36 @@
         </configuration>
       </plugin>
     </plugins>
-</build>
-<dependencies>
+  </build>
+  <dependencies>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
       </dependency>
+      
+      <!-- Start: JPA Persistence Dependencies -->
+		<dependency>
+			<groupId>org.uqbar-project</groupId>
+			<artifactId>jpa-java8-extras</artifactId>
+			<version>1.0-alpha-1</version>
+		</dependency>
+
+		<!-- driver jdbc -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.26</version>
+		</dependency>
+
+
+		<!-- dependency test -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.2.8</version>
+		</dependency>
+      <!-- End: JPA Persistence Dependencies -->
 
       <dependency>
         <groupId>org.uqbar-project</groupId>
@@ -71,7 +99,6 @@
  		 <version>2.5</version>
 	</dependency>
 
-</dependencies>
-
+  </dependencies>
 </project>
 
