--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,11 @@
 
 
 		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>3.3.0</version>
-		</dependency>
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>2.11.4</version>
+</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mongodb.morphia/morphia -->
 		<dependency>
@@ -121,6 +121,17 @@
 			<version>1.50.5</version>
 		</dependency>
 
+
+<dependency>
+    <groupId>org.jongo</groupId>
+    <artifactId>jongo</artifactId>
+    <version>1.0</version>
+</dependency>
+<dependency>
+    <groupId>com.github.fakemongo</groupId>
+    <artifactId>fongo</artifactId>
+    <version>1.3.6</version>
+</dependency>
 	</dependencies>
 </project>
 
