--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,19 @@
 			<version>1.2.1</version>
 		</dependency>
 
+		<!-- UI -->
+				<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-core</artifactId>
+			<version>2.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-template-handlebars</artifactId>
+			<version>2.3</version>
+		</dependency>
+		
 	</dependencies>
 </project>
 
