--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
 			<version>2.3</version>
 		</dependency>
 		
+		<dependency> 
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.21</version>
+        </dependency>
+
 	</dependencies>
 </project>
 
